--- a/posts/2025-06-03.md
+++ b/posts/2025-06-03.md
@@ -2189,6 +2189,166 @@ Also, we never got around to teaching it about multi-rule optimization, which mi
 Before we work to spill data to disk, let's at least make sure we aren't going to be spilling pure waste.
 We'll also need to look around for a harder problem, because doing spill-to-disk with less than 1GB feels a bit performative.
 
+---
+
+If we look more carefully at where the memory goes, we'll find out that most of it is waste.
+
+Having run our workhorse computation to completion, we have the following relations with their associated fact counts:
+```
+> .list
+        -M:     92806768
+        -a:     362799
+        -d:     1147612
+        Fd:     1859886
+        MFd:    73474947
+        a:      362799
+        d:      1147612
+109.333µs
+
+>
+```
+
+The large one here is `-M`, though `MFd` is also pretty chonky.
+Both of them will tell roughly the same story, so we'll focus on `-M` for now.
+
+Recall that each of our collections are actually a log-structure merge-thing (list).
+That is, each is represented by a sequence of lists whose lengths at least double over the previous one.
+If we crack open the representation of `-M` and print out these lengths, we get the report
+```
+Layer size: 57289225
+Layer size: 24951369
+Layer size: 6406719
+Layer size: 2738555
+Layer size: 1040087
+Layer size: 351521
+Layer size: 24612
+Layer size: 4550
+Layer size: 130
+```
+
+Let's focus on the largest one, with 57,289,225 facts, as again the other layers tell a similar story.
+
+Each of these layers is a columnar representation of `Vec<Vec<Vec<u8>>>`, a list of facts, where a fact is a list of byte lists.
+So many lists.
+The columnar layout uses three columns:
+```rust
+Vecs {
+    bounds: Vec<usize>,
+    values: Vecs {
+        bounds: Vec<usize>,
+        values: Vec<u8>,
+    }
+}
+```
+The outer `bounds` indicates for each fact, how many terms (each a `Vec<u8>`) does it contain.
+The inner `bounds` indicates for each term, how many bytes does it contain.
+The final `values` containes all of the bytes for all of the terms for all of the facts.
+
+The largest layer requires just over two gigabytes:
+```
+total:  2,098,253,766
+        = 458,313,800
+        + 916,627,600
+        + 723,312,366
+```
+You can see the contribution in order there, with the actual byte data at the very end.
+There is a lot of information that is not the actual bytes, and we're going to get that all down to zero, in some cases.
+Our case, in particular.
+
+### A sequence of optimizations
+
+We'll discuss several optimizations that can apply in sequence.
+They conclude with a new datastructure that I want to try out, and which I've implemented.
+At the same time, most of the optimizations apply even to the original representation, and I'd like to start with them to avoid conflating the gains of the new representation with easier optimizations.
+
+Now is also a great time to admit that I haven't implemented all of the optimizations yet.
+I have implemented them in other systems, and they should be pretty easy to do here, but as you'll see it requires a bit of tomfoolery.
+Totally unobjectionable tomfoolery in my eyes, but I wanted to get to a datastructure I like before the shenanigans.
+With that caveat in place, let's begin.
+
+### Optimization: specialize the bounds
+
+The first large number above (458,313,800) tells us the boundaries between facts.
+What are the offsets in our list of terms where one fact stops and another fact starts?
+Our facts all have exactly two columns, and generally all of the facts for any one relation will have the same number of columns.
+
+This collection is exactly `(0, len+1).step_by(arity)`.
+
+We don't need 458,313,800 bytes to keep track of the arity and the length.
+We can instead use a container for `usize` that optimistically assumes the data will be strided, like so, and record the arity and length that would make it so.
+If that ever stops being the case, the container cuts over to recording explicit offsets.
+
+This optimization effectively zeros out the first large number.
+
+### Optimization: make the terms the same length
+
+The second large number above (916,627,600) records the boundaries between terms.
+What are the offsets in our list of bytes where one term stops and another term starts?
+Our terms have .. varying numbers of bytes because they are the textual representations of numbers.
+The numbers go up to seven digits, and many of them are actually seven digits.
+
+While we might need 916,627,600 bytes to record all of the varying lengths of each of the terms, we don't actually need to have terms of varying length.
+We can just use seven bytes for all terms, reformatting the text to include leading zeros.
+At this point, the same striding optimization kicks in, and we would record a length and the stride of seven.
+
+This optimization effectively zeros out the second large number.
+
+It does potentially increase the number of bytes, but we'll reduce these in just a moment.
+
+### Optimization: represent terms in binary
+
+The remaining large number (723,312,366) is the concatenation of all bytes from all terms from all facts.
+There are roughly seven bytes per term, two terms per fact, and ~57.2M facts, which gets us to this number.
+
+We've already discussed that these are numbers up to seven digits, and as such they fit great in a `u32` which takes only four bytes.
+If we go down from seven bytes per term to four bytes per term, we end up with
+```
+   57,289,225
+          * 2
+          * 4
+    ---------
+= 458,313,800
+```
+many bytes.
+This is already a 1.57x reduction from the original size, but there is one last trick to pull.
+
+While `u32` is a fine Rust type, we know the numbers are at most seven digits, which means they fit great in *three* bytes.
+And we just have lists of bytes we are working with.
+Three is a non-standard number of bytes, but .. we don't care.
+We might care eventually when we look at cache line alignment, but .. for the moment let's not worry.
+
+A further 4/3x reduction compounds to a 2.10x reduction, and gets us down to 343,735,350 bytes.
+All told, we have gone from two gigabytes down to ~350 megabytes, a roughly 6.10x reduction.
+At the same time, we've probably made our computation *easier*, because all of the various offsets are directly computed rather than the result of sniffing around in lots of data.
+
+### Getting to 10x
+
+I claimed we were going to get a 10x reduction in memory footprint, and .. I wrote that before I looked at the data.
+But we're going to do it.
+
+The last remaining improvement comes from the observation that our lists of sorted facts have a dramatic amount of repetition in their first term.
+This makes sense: we've sorted them, and as many facts as there are that start with the same term, we'll have that many copies of the first term in a row.
+Not much point writing these first terms down explicitly, is there?
+
+The large layer we are discussing has 57,289,225 distinct facts, but only 1,147,612 distinct first terms.
+We could rewrite our facts from a collection of `(Term, Term)` into a collection of `(Term, [Term])`: a list of pairs of distinct first terms, and the list of each's second terms.
+If we do this naively in columns, using `usize` for the bounds, it would take
+```
+term0.values:    1,147,612 * 3 =   3,442,836
+term1.bounds:    1,147,613 * 8 =   9,180,904
+term1.values:   57,289,225 * 3 = 171,867,675
+                                 -----------
+total bytes                      184,491,415
+```
+
+This hits a 11.37x reduction from our initial 2GB, for this the largest layer of the largest relation.
+If the pattern of reduction holds across our 5GB of total state, we'd expect to get down below 500MB.
+It probably wont be *quite* as strong a reduction for the smaller layers, because the lower density of facts might result in less repetition, but it is close for the largest of layers, which are the ones that matter.
+
+This is where we will leave our announcements of improvements for the moment.
+
+Up next will be *actually doing* these things.
+
 ## Spilling facts to disk
 
 **Teaser**: our `columnar` stores that hold our facts are backed by relatively few but large allocations.
