--- a/posts/2025-06-03.md
+++ b/posts/2025-06-03.md
@@ -2335,10 +2335,10 @@ We could rewrite our facts from a collection of `(Term, Term)` into a collection
 If we do this naively in columns, using `usize` for the bounds, it would take
 ```
 term0.values:    1,147,612 * 3 =   3,442,836
-term1.bounds:    1,147,613 * 8 =   9,180,904
+term1.bounds:    1,147,612 * 8 =   9,180,896
 term1.values:   57,289,225 * 3 = 171,867,675
                                  -----------
-total bytes                      184,491,415
+total bytes                      184,491,407
 ```
 
 This hits a 11.37x reduction from our initial 2GB, for this the largest layer of the largest relation.
@@ -2348,6 +2348,41 @@ It probably wont be *quite* as strong a reduction for the smaller layers, becaus
 This is where we will leave our announcements of improvements for the moment.
 
 Up next will be *actually doing* these things.
+
+
+### Update 02-07-2025
+
+We have the first wave of optimizations in place and running.
+That largest batch now takes exactly 343,735,382 bytes vs a theorized 343,735,350. The addition 32 bytes are two copies of `(stride, length)` pairs of `u64` numbers, which were the two instances of "effectively zero" in the text above.
+
+The computation takes less time now!
+The time hovers around 95s, dipping below and raising above, slightly.
+This compares to ~115s that it used to be, so knocking off about 20%.
+And there should be more optimization to do; we're pretty casual about the implementation, and haven't even looked at a profiler to see what it is doing.
+
+The second wave of optimizations, recording the data as a tree rather than a list, is also in place for measurement purposes, but not yet driving the engine.
+The breakdown of the largest batch of `-M` previously and now looks like:
+
+    old bytes: 343,735,382
+             =          16    // every fact has 2 terms.
+             +          16    // every term has 3 bytes.
+             + 343,735,350    // 2 x 3 x 57289225 bytes.
+
+    new bytes: 184,491,255
+             =          16    // only one set of first terms.
+             +          16    // every term has 3 bytes.
+             +   3,442,836    // 3 x 1147612 (first terms) bytes.
+             +   9,180,696    // 8 x 1147587 (first terms) bounds.
+             +          16    // every term has 3 bytes.
+             + 171,867,675    // 3 x 57289225 bytes.
+
+The new representation uses two lists of byte lists, one for the single list of all distinct first terms, in order, and a second for a number of lists equal to the distinct first terms of the corresponding second terms.
+Mostly we are recording bytes, but we also need to take some space now to record the lengths of the lists in the second collection: not all first terms have the same number of second terms.
+It appears we were lightly lucky, and the first 25 lists had the same length, which explains why the `(first terms)` numbers don't match.
+
+The next step is deploying the layered trie in anger, to pilot the joins, merging, and deduplication.
+Once this is in, and running not-terribly, we can turn off the old representation and have a further reduced memory footprint.
+The layered trie is exciting to me personally, because I want to understand more about how to use this representation to represent relations that are more complex than our stolid binary relations.
 
 ## Spilling facts to disk
 
@@ -2371,6 +2406,202 @@ I think this was where I was going to do worst-case-optimal joins also, for some
 **Teaser**: We'll dive deeper into the moments in our code that exist because we didn't have compile time access to something that `datafrog` did have.
 I'm cautiously optimistic that we can get a fair bit of that performance back, by noticing that our data is laid out the same way, and we just need to help Rust notice that some implementations are still ok.
 And if not, we'll learn something.
+
+---
+
+Our *memory* optimization around using the same size for all terms leads to an impressive *compute* optimization.
+
+The memory optimization was that if all terms have the same length `B` in bytes, and all facts in a relation have the same number `T` of terms, then we can think of the `Vec<u8>` backing the relation as `Vec<[[u8; B]; T]>`.
+This removes all of the "mystery" about how the data are shaped, and gives Rust a lot of time back that it was previously spending carefully checking bounds and lengths and such.
+
+Comparisons, in particular, become substantially cheaper.
+
+Where do we do comparisons in `datatoad`?
+Pretty much everywhere.
+1. To form batches of facts we sort and deduplicate them.
+2. To merge batches we linearly scan each comparing items as we go.
+3. To join two relations we merge their keys, skipping over areas we miss.
+4. To filter new facts against old we scan the new facts and exponential search the old facts.
+
+These are in order of fact lifecycle, but also I think in order of decreasing "comparison density".
+Sorting requires a lot of comparisons; merging performs linear comparisons, and joining and antijoining (filtering) skips through larger datasets without looking at everything.
+
+What sort of amazing thing will happen if we make sorting faster?
+
+### Baseline
+
+Let's get baseline measurements for each of the two tasks, and three datasets.
+In doing this, we've had to back off of the "three bytes" take for each term, and go up to four bytes.
+Some of the inputs have values that go above 16M, unfortunately.
+But it also feels a bit more responsible, which feels good.
+
+Copy/pasting from above, my understanding of valid comparisons for the "dataflow" task are:
+
+| dataflow | httpd |   psql | lnx_kernel |
+| ---      |  ---: |   ---: |       ---: |
+| graspan  |  684s |  8640s |    42840s* |
+| datatoad | 7.44s | 17.26s |     42.25s |
+| datafrog | 1.30s |  4.06s |      8.03s |
+
+For the "aliasing" task, I'm less clear that we are doing the same thing, and I've also hand-optimized the logic.
+The `psql` input has multiple files, not unlike the `linux` input, and I'll use the biggest one.
+Also, we don't have a `datafrog` program for this problem, because it is a pain in the ass to write `datafrog` programs.
+In fact that's kinda why we are doing all of this.
+
+| aliasing |  httpd |   psql | lnx_kernel |
+| ---      |   ---: |   ---: |       ---: |
+| graspan  |   8.4h |  6.0h* |      1.7h* |
+| datatoad | 101.24s| 96.36s |     20.20s |
+| datafrog |    UNK |    UNK |        UNK |
+
+Again, let's not get too excited about the speed-up over the Graspan numbers.
+I'm not sure why they are large, but the point isn't that they are or are not a soft starting point, as much as evidence that we aren't way out in left field performance-wise.
+
+### Optimizing sorting
+
+Facts start life as a `Vec<Term>` where each `Term` is itself a `Vec<u8>`.
+Our first action, once we've collected one million facts (an arbitrary threshold, perhaps worth revisiting), is to sort and deduplicate that list of facts.
+
+Here's how we would normally sort and deduplicate our facts.
+```rust
+fn from(facts: &mut InternalContainer) -> Self {
+
+    let mut ordered = InternalContainer::default();
+    let borrowed = <InternalContainer as Container<Fact>>::borrow(facts);
+
+    let mut items = borrowed.into_index_iter().collect::<Vec<_>>();
+    items.sort();
+    items.dedup();
+    ordered.extend(items);
+    use columnar::Clear;
+    facts.clear();
+
+    Self { ordered }
+}
+```
+
+Informally, we collect references to the facts, and then sort and deduplicate the collected list.
+It's a bit awkward performance-wise, because unlike most good sort algorithms we aren't relocating the data to increase locality.
+At the same time, this is currently general columnar facts, terms, and bytes, all with varying lengths, and it isn't clear how to efficiently re-layout the data (radix sort?).
+
+But, there's a special case we've been discussing when we happen to know a common arity for facts, and a common byte length for terms.
+If we see that happen, and .. we've pre-baked in the constants to the program, good things can happen.
+Let's just insert this bit of code at the top of the method there
+```rust
+    if let (Some(2), Some(4)) = (facts.bounds.strided(), facts.values.bounds.strided()) {
+        let len = unsafe {
+            let temp: &mut Vec<[u8; 8]> = std::mem::transmute(&mut facts.values.values);
+            temp.set_len(temp.len() / 8);
+            temp.sort();
+            temp.dedup();
+            temp.set_len(temp.len() * 8);
+            temp.len() as u64
+        };
+        facts.bounds.bounds[1] = len / 8;
+        facts.values.bounds.bounds[1] = len / 4;
+        return Self { ordered: std::mem::take(facts) }
+    }
+```
+
+Oh sweet baby Jesus, someone invited `unsafe` to the party.
+
+What we are doing here is recasting a `Vec<u8>` as a `Vec<[u8; 8]>`, because we "know" that the bytes come in blocks of eight.
+I don't know a better way to sort and deduplicate than this transmute, though I'd love to hear.
+You can sort safely with [`[T]::as_chunks_mut`](https://doc.rust-lang.org/std/primitive.slice.html#method.as_chunks_mut), but you still want to deduplicate, and that seems to require a `Vec`.
+We could probably write safe dedup through a bunch of overwrites on the slice followed by a truncate on the `Vec<u8>`; I'll surely try that to avoid the `unsafe`.
+
+But for the moment, let's see what happens!
+We'll look at the original `datatoad` numbers and their improvements due to better sorting.
+First the dataflow use case:
+
+| dataflow | httpd |   psql | lnx_kernel |
+| ---      |  ---: |   ---: |       ---: |
+|  dt-orig | 7.44s | 17.26s |     42.25s |
+|  dt-sort | 4.99s | 13.55s |     32.15s |
+| datafrog | 1.30s |  4.06s |      8.03s |
+
+And the aliasing use case
+
+| aliasing |  httpd |   psql | lnx_kernel |
+| ---      |   ---: |   ---: |       ---: |
+|  dt-orig | 101.24s| 96.36s |     20.20s |
+|  dt-sort | 52.99s | 53.19s |     11.20s |
+| datafrog |    UNK |    UNK |        UNK |
+
+So that's a pretty big improvement.
+At least, if we could repeatedly knock off large fractions of runtime, we'll have something great in not too long.
+The effect is more pronounced in the more complex aliasing analysis, which seems to move more data around.
+
+### Optimizing merging
+
+We repeatedly merge lists of facts.
+
+We do this mostly to maintain a limited number of sorted lists, so that when we need to perform a join, or filter against existing records, we only need a few passes over data.
+
+The original merging code is not wildly complicated, and I won't copy it here.
+We'll do a similar thing near the head of the method, though, to see if we can spy some properly aligned inputs.
+
+```rust
+    if let (Some(2), Some(4)) = (self.ordered.bounds.strided(), self.ordered.values.bounds.strided()) {
+        if let (Some(2), Some(4)) = (other.ordered.bounds.strided(), other.ordered.values.bounds.strided()) {
+            let mut ordered = InternalContainer::default();
+            ordered.values.values = self.ordered.values.values.iter().chain(other.ordered.values.values.iter()).copied().collect::<Vec<_>>();
+            let len = unsafe {
+                let temp: &mut Vec<[u8; 8]> = std::mem::transmute(&mut ordered.values.values);
+                temp.set_len(temp.len() / 8);
+                temp.sort();
+                temp.dedup();
+                temp.set_len(temp.len() * 8);
+                temp.len() as u64
+            };
+            ordered.bounds.clear();
+            ordered.bounds.bounds[0] = 2;
+            ordered.bounds.bounds[1] = len / 8;
+            ordered.values.bounds.clear();
+            ordered.values.bounds.bounds[0] = 4;
+            ordered.values.bounds.bounds[1] = len / 4;
+            return Self { ordered };
+        }
+    }
+```
+This case is a bit more complicated, in that we need to form an output which means setting its strides and lengths correctly.
+Otherwise, this implements "merge" by "concatenate, then sort and merge", which is much less sophisticated than our original merge.
+But it works.
+
+First the dataflow use case:
+
+| dataflow | httpd |   psql | lnx_kernel |
+| ---      |  ---: |   ---: |       ---: |
+|  dt-orig | 7.44s | 17.26s |     42.25s |
+|  dt-sort | 4.99s | 13.55s |     32.15s |
+|  dt-both | 3.71s | 11.23s |     23.58s |
+| datafrog | 1.30s |  4.06s |      8.03s |
+
+And the aliasing use case
+
+| aliasing |  httpd |   psql | lnx_kernel |
+| ---      |   ---: |   ---: |       ---: |
+|  dt-orig | 101.24s| 96.36s |     20.20s |
+|  dt-sort | 52.99s | 53.19s |     11.20s |
+|  dt-both | 31.32s | 30.08s |      8.56s |
+| datafrog |    UNK |    UNK |        UNK |
+
+These are some pretty decent improvements, for not all that much code.
+They do strongly rely on the common length of every term, which makes sense with typed primitive data, but won't hold up if we start using strings everywhere again.
+
+### Optimizing other things
+
+There are two more uses of comparison: joining and antijoining (filtering out old facts).
+
+Looking at profiles, these might be another 30% of the time, and are absolutely worth removing.
+Or they would be, except that we are just about to rewrite a bunch of this logic to move to trie-based data structures.
+When we do, we'll be keeping our eye out for the same optimization opportunity, which certainly exists but applies on a column-by-column basis, which is more likely to hold than our "all terms have the same length" requirement.
+
+We didn't quite get to the compiled performance of `datafrog`, and I think we'll probably return to this subject in the future, as there's no obvious (to me) reason that we shouldn't be able to hit the same performance when allowed the cheeky sorts of nonsense we've just pulled in this section.
+Some profiling should reveal what it is that `datatoad` is doing that `datafrog` does not do, and it seems like all of our computational kernels can be brought into line with some `unsafe`.
+
+I'm personally going to next see if I can remove the `unsafe` with some safe byte shuffling, followed by a safe (but unjustified) vector truncate.
+Unsafe code is the worst, folks; avoid it at all costs.
 
 ## Specializing to custom representations
 
